fix little error with overflow-y in body

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,6 @@
 body{
   font-family: 'Open Sans', sans-serif;
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 .type-normal {
